Fixed alignment of the widget item headers

--- a/src/index.css
+++ b/src/index.css
@@ -121,8 +121,14 @@
 .wbdv-margin-5{
     margin: 5px;
 }
+
 .wbdv-widget-list-top{
     text-align: right
 }
+
+.wbdv-margin-2{
+    margin: 2px;
+}
+
 
 
